# StatsMicroservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: urls.py
api/v1/: urls.py
core/: authentication.py  consumer.py  settings.py  urls.py
database/: crud.py  db.py
endpoints/: innotter.py
models/: innotter.py
