[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["sheirand <eugene.osakovich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
boto3 = "^1.24.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
